@@ -918,6 +918,33 @@ literal|"1"
 argument_list|)
 argument_list|)
 decl_stmt|;
+comment|/** Get the minimum number of times to run tests until a failure happens */
+DECL|field|TEST_ITER_MIN
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|TEST_ITER_MIN
+init|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"tests.iter.min"
+argument_list|,
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|TEST_ITER
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
 comment|/** Get the random seed for tests */
 DECL|field|TEST_SEED
 specifier|public
@@ -6776,6 +6803,22 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|// only print iteration info if the user requested more than one iterations
+name|boolean
+name|verbose
+init|=
+name|VERBOSE
+operator|&&
+name|TEST_ITER
+operator|>
+literal|1
+decl_stmt|;
+name|int
+name|lastIterFailed
+init|=
+operator|-
+literal|1
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -6793,11 +6836,7 @@ control|)
 block|{
 if|if
 condition|(
-name|VERBOSE
-operator|&&
-name|TEST_ITER
-operator|>
-literal|1
+name|verbose
 condition|)
 block|{
 name|System
@@ -6829,6 +6868,46 @@ argument_list|,
 name|arg1
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|testsFailed
+condition|)
+block|{
+name|lastIterFailed
+operator|=
+name|i
+expr_stmt|;
+if|if
+condition|(
+name|i
+operator|==
+name|TEST_ITER_MIN
+operator|-
+literal|1
+condition|)
+block|{
+if|if
+condition|(
+name|verbose
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"\nNOTE: iteration "
+operator|+
+name|lastIterFailed
+operator|+
+literal|" failed !"
+argument_list|)
+expr_stmt|;
+block|}
+break|break;
+block|}
+block|}
 block|}
 block|}
 DECL|method|LuceneTestCaseRunner
